# octree-cuda

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  doxy_lib_config  filter_ply.py  ply_ordering.py
.circleci/: config.yml
OctreeApi/: CMakeLists.txt
OctreeApi/OctreeLibrary/: CMakeLists.txt
OctreeApi/OctreeLibrary/Tests/: CMakeLists.txt  main.cpp  test_initial_point_counting.cpp  test_initial_point_counting_sparse.cpp  test_merging.cpp  test_merging_sparse.cpp  test_octree.cu  test_point_cloud_device.cpp  test_point_cloud_device.cu  test_point_cloud_host.cpp  test_point_cloud_host.cu  test_point_distributing.cpp  test_point_distribution_sparse.cpp  test_subsampling_sparse.cpp  test_tools.cpp
OctreeApi/OctreeLibrary/Tests/denseOctree/: test_initial_point_counting.cpp  test_merging.cpp  test_point_distributing.cpp
OctreeApi/OctreeLibrary/Tests/sparseOctree/: test_initial_point_counting_sparse.cpp  test_merging_sparse.cpp  test_point_distribution_sparse.cpp  test_subsampling_sparse.cpp
OctreeApi/OctreeLibrary/Tests/tools/: test_tools.cpp
OctreeApi/OctreeLibrary/include/: api_types.h  cudaArray.h  defines.cuh  denseOctree.h  eventWatcher.h  global_types.h  gpu_types.cuh  memory_tracker.cuh  metadata.cuh  octree.cuh  octreeBase.h  octree_data.cuh  octree_metadata.h  octree_processor.cuh  octree_processor.h  octree_processpr_impl.cuh  point_cloud.cuh  pointcloud.h  sparseOctree.h  time_tracker.cuh  timing.cuh  tools.cuh  types.cuh  types.h
OctreeApi/OctreeLibrary/src/: cudaArray.h  kernels.cuh  octree_processor.cu  point_cloud.cu  pointcloud.cpp  sparseOctree.cpp  tools.cu  tools.cuh
OctreeApi/OctreeLibrary/src/chunking/: cellMerging.cu  initialPointCounting.cu  pointDistribution.cu
OctreeApi/OctreeLibrary/src/chunking_sparse/: cellMergingSparse.cu  initialPointCountingSparse.cu  pointDistributionSparse.cu
OctreeApi/OctreeLibrary/src/data/: cuda_array.cuh  octree.cu  point_cloud.cu  subsampling_data.cu
OctreeApi/OctreeLibrary/src/denseOctree/: cellMerging.cu  denseOctree.cpp  initialPointCounting.cu  pointDistribution.cu
OctreeApi/OctreeLibrary/src/export/: octree_exporter.cuh  ply_exporter.cu  ply_exporter.cuh  potree_exporter.cu  potree_exporter.cuh
OctreeApi/OctreeLibrary/src/include/: cudaArray.h  kernel_structs.cuh  octree.cuh  octree_exporter.cuh  octree_processor_impl.cuh  ply_exporter.cuh  point_cloud.cuh  potree_exporter.cuh  subsampling_data.cuh  tools.cuh  types.cuh
OctreeApi/OctreeLibrary/src/kernel/: chunking.cuh  first_point_subsampling.cuh  fp_subsample_evaluation.cuh  fp_subsampling.cuh  fp_subsampling_evaluation.cuh  hierarchical_merging.cuh  initial_point_counting.cu  kernel_executor.cuh  kernel_helpers.cu  kernel_helpers.cuh  kernel_indexing.cu  kernel_indexing.cuh  kernel_inter_cell_filtering.cuh  mapCloudToGrid.cu  octree_initialization.cu  octree_initialization.cuh  point_count_propagation.cu  point_count_propagation.cuh  point_counting.cuh  point_distributing.cu  point_distributing.cuh  point_distributing.cu~  pseudo_random_subsampling.cu  pseudo_random_subsampling.cuh  random_initialization.cuh  random_subsampling.cuh  rp_subsample_evaluation.cuh  rp_subsampling.cuh  subsample_evaluating.cuh  tree_node_merging.cu
OctreeApi/OctreeLibrary/src/misc/: defines.cuh  timing.cuh  tools.cu
OctreeApi/OctreeLibrary/src/octree/: octree.cu  octree_data.cu
OctreeApi/OctreeLibrary/src/octree_exporter/: octree_exporter.cuh  ply_exporter.cu  ply_exporter.cuh  potree_exporter.cu  potree_exporter.cuh  thread_pool.h
OctreeApi/OctreeLibrary/src/octree_processor/: benchmarking.cu  debugging.cu  dummy.cpp  octree_chunking.cu  octree_processor.cu  octree_subsampling.cu  random_subsampling.cu  sparseOctree.cu
OctreeApi/OctreeLibrary/src/octree_processor/pipeline/: first_point_subsampling.cu  random_subsampling.cu
OctreeApi/OctreeLibrary/src/octree_processor_impl/: benchmarking.cu  debugging.cu  first_point_subsampling.cu  fp_subsampling.cu  histogram.cu  octree_chunking.cu  octree_processor_impl.cu  octree_subsampling.cu  random_subsampling.cu  rp_subsampling.cu  subsampling.cu
OctreeApi/OctreeLibrary/src/point_cloud/: point_cloud.cu  point_cloud.cuh
OctreeApi/OctreeLibrary/src/sparseOctree/: benchmarking.cpp  benchmarking.cu  cellMergingSparse.cu  data_export.cpp  data_export.cu  debugging.cpp  debugging.cu  indexing.cpp  indexing.cu  initialPointCountingSparse.cu  initial_point_counting.cpp  pointDistributionSparse.cu  sparseOctree.cpp  sparseOctree.cu  tools.cpp
OctreeApi/OctreeLibrary/src/sparseOctree/pipeline/: first_point_subsampling.cu  random_subsampling.cu
OctreeApi/include/: octreeApi.h
OctreeApi/src/: json_exporter.h  octreeApi.cpp  session.cpp  session.h
OctreeInspector/: test.html
OctreeLibrary/: CMakeLists.txt
OctreeLibrary/Tests/: CMakeLists.txt  test_initial_point_counting_sparse.cpp
OctreeLibrary/include/: octreeApi.h
OctreeLibrary/src/: defines.cuh  eventWatcher.h  pointcloud.h  tools.cuh
OctreeLibrary/src/api/: octreeApi.cpp  session.cpp  session.h
OctreeLibrary/src/chunking/: cellMerging.cu  initialPointCounting.cu  pointDistribution.cu
OctreeLibrary/src/chunking_sparse/: cellMergingSparse.cu  initialPointCountingSparse.cu  pointDistributionSparse.cu
Tests/: CMakeLists.txt  common.cuh  main.cpp  test_chunking.cpp  test_generat_equally_sampled.cpp  test_initial_point_counting.cpp  test_initial_point_counting_sparse.cpp  test_merging.cpp  test_merging_sparse.cpp  test_point_distributing.cpp  test_tools.cpp
lib/: CMakeLists.txt
lib/include/: cudaArray.h  eventWatcher.h  pointcloud.h  tools.cuh  types.h
lib/src/: chunking.cu  defines.cuh  initialPointCounting.cu  pointcloud.cpp  timing.cuh  tools.cu  tools.cuh
lib/src/chunking/: cellMerging.cu  initialPointCounting.cu  pointDistribution.cu
lib/src/chunking_sparse/: cellMergingSparse.cu  initialPointCountingSparse.cu  pointDistributionSparse.cu
src/: argparser.h  boundingbox.h  chunking.cu  chunking.cuh  main.cpp  pointcloud.cpp  pointcloud.h  tools.cu  tools.cuh  types.h
tools/: gridsize.py  memory_consumption.py  (+1 more)
